--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "popper.js": "^1.14.4",
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "reactstrap": "^6.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
